Fix z-index of consent banner

--- a/src/scss/_consent.scss
+++ b/src/scss/_consent.scss
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 9999999;
   display: flex;
   background: var(--consent-banner-background);
   color: var(--consent-banner-color);
